# PetCare

./: .gitignore  README.md
backend/: activities.py  app.py  appointments.py  contacts.py  diets.py  medications.py  notifications.py  pets.py  pyproject.toml  requirements.txt  resources.py  share.py  test_appointments.py  test_medications.py  test_pets.py  test_users.py  users.py  vaccinations.py
database/: appts-activities-nofis_data.sql  petcare_db.sql  petcare_db_draft.sql  petcare_test_data.sql  petcare_test_data_added.sql  petcare_test_data_diets.sql  petcare_test_data_meds.sql  petcare_test_data_resources.sql  petcare_test_data_vaccinations.sql
frontend/: angular.json  package-lock.json  package.json
frontend/src/: index.html
frontend/src/app/: app-routing.module.ts  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts  pet-care.service.spec.ts  pet-care.service.ts
frontend/src/app/about-us/: about-us.component.css  about-us.component.html
frontend/src/app/contact-us/: contact-us.component.css  contact-us.component.html
frontend/src/app/create-pet-profile/: create-pet-profile.component.css  create-pet-profile.component.html  create-pet-profile.component.spec.ts  create-pet-profile.component.ts
frontend/src/app/main-dashboard/: main-dashboard.component.css  main-dashboard.component.html  main-dashboard.component.spec.ts  main-dashboard.component.ts
frontend/src/app/sign-in/: sign-in.component.css  sign-in.component.html  sign-in.component.spec.ts  sign-in.component.ts
frontend/src/app/sign-up/: sign-up.component.css  (+3 more)
(+4 files in other folders)
